fix(cd): restore immutable error contract migration